--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,6 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
 }
 header a {
   color: green;
