--- a/src/components/ArticlesOfLoginUser/ArticlesOfLoginUser.module.css
+++ b/src/components/ArticlesOfLoginUser/ArticlesOfLoginUser.module.css
@@ -20,3 +20,9 @@
   transition-duration: 1s;
   transform: scale(1.1);
 }
+@media (max-width: 420px) {
+  .articleCard {
+    width: 100%;
+    font-size: 16px;
+  }
+}
