--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -29,19 +29,23 @@
 .personArticle .infoPerson {
   margin: 10px 0;
   border-radius: 50%;
+  width: 67%;
 }
 .personArticle .personIMGMainPage {
   overflow: hidden;
   text-align: center;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
 }
 .personArticle .userPhoto {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   transition: 1s;
   margin-bottom: 10px;
+}
+.numberPagination {
+  text-align: center;
 }
 @media (max-width: 420px) {
   .personArticle {
