--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,8 +6,10 @@
   max-width: 100%;
 }
 .wrapper-content {
-  height: 100%;
-  max-height: 100%;
+  display: flex;
+  align-items: normal;
+  flex-direction: column;
+  height: 93vh;
 }
 
 button {
