--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -4,6 +4,8 @@
   border: 1px solid black;
   background-color: hotpink;
   border-radius: 50%;
+  width: 30px;
+  display: inline-block;
 }
 .userPhoto:hover {
   transform: scale(1.5);
@@ -31,6 +33,7 @@
   border-radius: 50%;
   width: 67%;
 }
+
 .personArticle .personIMGMainPage {
   overflow: hidden;
   text-align: center;
@@ -46,6 +49,18 @@
 }
 .numberPagination {
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+.numberPagination .itemPagination {
+  border: 1px greenyellow solid;
+  border-radius: 5px;
+}
+
+.numberPagination span {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 @media (max-width: 420px) {
   .personArticle {
